fix(card): update footer spacing to spec (#959)
## PR Checklist

Please check if your PR fulfils the following requirements:

- [x] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Footer has 16px padding

Issue Number: CDE-1098

## What is the new behavior?

Updated vertical padding to 8px as in the Figma specs

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

--- a/projects/ui/src/shim.cds-core.scss
+++ b/projects/ui/src/shim.cds-core.scss
@@ -872,7 +872,7 @@
   --clr-card-clickable-border-width: #{tokens.$cds-alias-object-border-width-200};
   --clr-card-text-color: #{tokens.$cds-alias-typography-color-400};
   --clr-card-header-padding: #{tokens.$cds-global-space-7};
-  --clr-card-footer-padding: #{tokens.$cds-global-space-7};
+  --clr-card-footer-padding: #{tokens.$cds-global-space-5} #{tokens.$cds-global-space-7};
   --clr-card-block-padding: #{tokens.$cds-global-space-7};
   --clr-card-list-group-item-padding: #{tokens.$cds-global-space-7};
   --clr-card-children-space-between: #{tokens.$cds-global-space-7};
